--- a/socialmedia/socialapp/templates/pages/all_cat.html
+++ b/socialmedia/socialapp/templates/pages/all_cat.html
@@ -1,17 +1,55 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
+<!doctype html>
+<html >
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <style>
+      .border{
+      border:1px solid black;
+    }
+    </style>
+  </head>
 <body>
-	{% load static %}
+	<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+ <div class="navbar-brand" > <img src="iti.png" /> </div>
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
+	 <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse" id="navbarNav">
+	 <ul class="navbar-nav">
+		 <li class="nav-item active">
+			 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		 </li>
+		 <li class="nav-item">
+			 <a class="nav-link" href="#">Features</a>
+		 </li>
+		 <li class="nav-item">
+			 <a class="nav-link" href="#">Pricing</a>
+		 </li>
+ </ul>
+ </div>
+</nav> -->
 
-		{%  for category in all_categories %}
-		<div>
-			<h3>{{category.category_name}}</h3>
+	<div align="center">
+<h1> Welcome </h1>
+</div>
 
-
-	</div>
-		{%  endfor %}
+{% load static %}
+  {%  for category in all_categories %}
+<div class="w3-sidebar w3-bar-block " style="width:20%">
+  <div>
+    <a href="/socialapp/{{category.category_name}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
+    <button class="btn btn-primary btn-small">Subscribe</button>
+    <button class="btn btn btn-danger btn-small">Unsubscribe</button>
+  </div>
+  {% endfor %}
+</div>
 </body>
+<script src="jquery.min.js"></script>
+<script src="bootstrap.bundle.min.js"></script>
 </html>
