handle promote and edit features for user

--- a/socialmedia/socialapp/templates/pages/all_user.html
+++ b/socialmedia/socialapp/templates/pages/all_user.html
@@ -6,9 +6,8 @@
 <body>
 
 
-	<td><a href="/opensource/new">add new student</a></td>
 	<table>
-	<th>Full name</th>
+	<th>username</th>
 	<th>email</th>
 	<!-- <th>track</th> -->
 	{% for usr in allusers %}
