category connect with posts page

--- a/socialmedia/socialapp/templates/pages/all_cat.html
+++ b/socialmedia/socialapp/templates/pages/all_cat.html
@@ -43,7 +43,7 @@
   {%  for category in all_categories %}
 <div class="w3-sidebar w3-bar-block " style="width:20%">
   <div>
-    <a href="/socialapp/{{category.category_name}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
+    <a href="/socialapp/{{category.id}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
     <button class="btn btn-primary btn-small">Subscribe</button>
     <button class="btn btn btn-danger btn-small">Unsubscribe</button>
   </div>
