--- a/socialmedia/socialapp/templates/pages/all_cat.html
+++ b/socialmedia/socialapp/templates/pages/all_cat.html
@@ -7,37 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap.min.css">
     <style>
       .border{
-      border:1px solid black;
+      border:1px solid blue;
     }
+      .bar{
+
+        background-color:#0059FF;
+        font-display: white;
+      }
     </style>
   </head>
 <body>
-	<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
- <div class="navbar-brand" > <img src="iti.png" /> </div>
+	<nav class="navbar navbar-expand-md  bar">
+
+    {% load static %}
+ <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="50" height="50"/><span> News </span> </div>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
 	 <span class="navbar-toggler-icon"></span>
- </button>
  <div class="collapse navbar-collapse" id="navbarNav">
-	 <ul class="navbar-nav">
-		 <li class="nav-item active">
-			 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		 </li>
-		 <li class="nav-item">
-			 <a class="nav-link" href="#">Features</a>
-		 </li>
-		 <li class="nav-item">
-			 <a class="nav-link" href="#">Pricing</a>
-		 </li>
- </ul>
  </div>
-</nav> -->
+</nav>
 
-	<div align="center">
-<h1> Welcome </h1>
-</div>
 
 {% load static %}
   {%  for category in all_categories %}
@@ -49,6 +43,10 @@
   </div>
   {% endfor %}
 </div>
+
+
+</div>
+
 </body>
 <script src="jquery.min.js"></script>
 <script src="bootstrap.bundle.min.js"></script>
