--- a/socialmedia/socialapp/templates/pages/all_cat.html
+++ b/socialmedia/socialapp/templates/pages/all_cat.html
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="bootstrap.min.css">
+{% load static %}
+    <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
     <style>
       .border{
-      border:1px solid blue;
+      border: 5px solid blue;
     }
       .bar{
-
         background-color:#0059FF;
         font-display: white;
       }
@@ -23,31 +21,70 @@
   </head>
 <body>
 	<nav class="navbar navbar-expand-md  bar">
-
     {% load static %}
- <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="50" height="50"/><span> News </span> </div>
+ <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/><span> News </span> </div>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
 	 <span class="navbar-toggler-icon"></span>
  <div class="collapse navbar-collapse" id="navbarNav">
  </div>
 </nav>
+<div class="container">
+<div class="row">
+<div class=" col-8">
+  <br/>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+ <ol class="carousel-indicators ">
+   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" ></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+ </ol>
+ <div class="carousel-inner">
+   <div class="carousel-item active" width="100">
+      {% load static %}
+     <img class="d-block w-100" src="{%static 'photos/1.jpg' %}" alt="First slide" width="200"/>
+     <div class="carousel-caption d-none d-md-block">
+     <a href="/socialapp/2/cat_posts" > Sports Latest News see more</a>
+     </div>
+   </div>
+   <div class="carousel-item">
+     <img class="d-block w-100" src="{%static 'photos/4.jpg' %}" alt="Second slide" width="200"/>
+     <div class="carousel-caption d-none d-md-block">
+     <a href="/socialapp/2/cat_posts" >Latest News see more</a>
+     </div>
+   </div>
+
+    <div class="carousel-item">
+     <img class="d-block w-100" src="{%static 'photos/3.jpg' %}" alt="Third slide" width="200"/>
+   </div>
+ </div>
+ <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+   <span class="carousel-control-prev-icon" ></span>
+ </a>
+ <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+   <span class="carousel-control-next-icon" ></span>
+        </a>
+  </div>
 
 
-{% load static %}
+</div>
+<div class="col-1"> </div>
+<div class="col-3" >
+
+  <br/>
   {%  for category in all_categories %}
-<div class="w3-sidebar w3-bar-block " style="width:20%">
+<div class="w3-sidebar w3-bar-block border " style="width:20%" align="right">
   <div>
     <a href="/socialapp/{{category.id}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
     <button class="btn btn-primary btn-small">Subscribe</button>
     <button class="btn btn btn-danger btn-small">Unsubscribe</button>
   </div>
   {% endfor %}
+  </div>
+</div>
 </div>
 
-
 </div>
-
 </body>
-<script src="jquery.min.js"></script>
-<script src="bootstrap.bundle.min.js"></script>
+<script src="{% static 'jquery.min.js' %}"></script>
+<script src="{% static 'bootstrap.bundle.min.js' %}"></script>
 </html>
