added top posts in home

--- a/socialmedia/socialapp/templates/pages/cat_posts.html
+++ b/socialmedia/socialapp/templates/pages/cat_posts.html
@@ -16,7 +16,7 @@
   </head>
 <body>
   <br/>
-<div class="row">
+<div align="center" class="row">
 {% load static %}
   {%  for posts in all_category_posts %}
   <div class="border col-8 ">
