--- a/socialmedia/socialapp/templates/pages/all_cat.html
+++ b/socialmedia/socialapp/templates/pages/all_cat.html
@@ -17,6 +17,11 @@
         background-color:#0059FF;
         font-display: white;
       }
+      a {
+    color: Black;
+    style:bold;
+    text-decoration: underline;
+        }
     </style>
   </head>
 <body>
@@ -26,6 +31,7 @@
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
 	 <span class="navbar-toggler-icon"></span>
  <div class="collapse navbar-collapse" id="navbarNav">
+   Welcome
  </div>
 </nav>
 <div class="container">
@@ -41,20 +47,16 @@
  <div class="carousel-inner">
    <div class="carousel-item active" width="100">
       {% load static %}
-     <img class="d-block w-100" src="{%static 'photos/1.jpg' %}" alt="First slide" width="200"/>
-     <div class="carousel-caption d-none d-md-block">
-     <a href="/socialapp/2/cat_posts" > Sports Latest News see more</a>
-     </div>
+     <img class="d-block w-100" src="{%static 'photos/sports.jpg' %}" alt="First slide" width="200"/>
+
    </div>
    <div class="carousel-item">
-     <img class="d-block w-100" src="{%static 'photos/4.jpg' %}" alt="Second slide" width="200"/>
-     <div class="carousel-caption d-none d-md-block">
-     <a href="/socialapp/2/cat_posts" >Latest News see more</a>
-     </div>
+     <img class="d-block w-100" src="{%static 'photos/arts.jpg' %}" alt="Second slide" width="100"/>
+
    </div>
 
     <div class="carousel-item">
-     <img class="d-block w-100" src="{%static 'photos/3.jpg' %}" alt="Third slide" width="200"/>
+     <img class="d-block w-100" src="{%static 'photos/news.jpg' %}" alt="Third slide" width="200"/>
    </div>
  </div>
  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -64,6 +66,27 @@
    <span class="carousel-control-next-icon" ></span>
         </a>
   </div>
+  <br/>
+  <hr/>
+
+  {% load static %}
+    {%  for posts in all_posts %}
+  <div class="border text-center ">
+  <h2> {{posts.title }} </h2>
+    <a href="udhuhswu"> <img width="300" height="200" src="{%static  posts.img %}" > </a>
+    <br/>
+    <p> {{posts.p_body}} </p>
+    <span> tags:#{{posts.tag}} </span>
+  <br/>
+      {%  for category in all_categories %}
+        {% if posts.cat_name_id == category.id %}
+
+    <span> Category:{{category.category_name}} </span>
+       {% endif %}
+       {% endfor %}
+    </div>
+  </br>
+    {% endfor %}
 
 
 </div>
