--- a/socialmedia/socialapp/templates/pages/cat_posts.html
+++ b/socialmedia/socialapp/templates/pages/cat_posts.html
@@ -10,28 +10,47 @@
     <style>
       .border{
       border:1px solid black;
-      width:60%
+    }
+    .bar{
+      background-color:#0059FF;
+      font-display: white;
     }
     </style>
   </head>
 <body>
-  <br/>
-<div align="center" class="row">
-{% load static %}
-  {%  for posts in all_category_posts %}
-  <div class="border col-8 ">
+  <nav class="navbar navbar-expand-md  bar">
+    {% load static %}
+ <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/><span> News </span> </div>
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
+   <span class="navbar-toggler-icon"></span>
+ <div class="collapse navbar-collapse" id="navbarNav">
+   Welcome
+ </div>
+</nav>
+<br/>
 
+
+<div  class="row">
+    <div class="col-2"> </div>
+{% load static %}
+<div class=" col-8 text-center">
+  {%  for posts in all_category_posts %}
+
+<div class="border">
   <h2> {{posts.title }} </h2>
-  <img width="350" height="350" src="{%static  posts.img %}" >
+  <a href="/socialapp/{{posts.id}}/post_page"> <img width="350" height="350" src="{%static  posts.img %}" ></a>
 
   <br/>
   <p> {{posts.p_body}} </p>
-  <span> tags: {{posts.tag}} </span>
+  <span> tags:#{{posts.tag}} </span>
 <br/>
   <span> Category:{{cat_name.category_name}} </span>
-  </div>
+</div>
+<br/>
   {% endfor %}
-
+    </div>
+<div class="col-2"> </div>
+</div>
   </body>
   <script src="{% static 'jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
