--- a/socialmedia/socialapp/templates/pages/cat_posts.html
+++ b/socialmedia/socialapp/templates/pages/cat_posts.html
@@ -13,19 +13,17 @@
     }
     .bar{
       background-color:#0059FF;
-      font-display: white;
+
     }
     </style>
   </head>
 <body>
   <nav class="navbar navbar-expand-md  bar">
     {% load static %}
- <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/><span> News </span> </div>
+ <div class="navbar-brand" ><a href="/socialapp/home/" > <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/></a>
+   <span> News </span> </div>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
    <span class="navbar-toggler-icon"></span>
- <div class="collapse navbar-collapse" id="navbarNav">
-   Welcome
- </div>
 </nav>
 <br/>
 
