CRUDE users and categories with bootstrap

--- a/socialmedia/socialapp/templates/admin/dashboard.html
+++ b/socialmedia/socialapp/templates/admin/dashboard.html
@@ -6,6 +6,12 @@
 <body>
 	<div>dashboard</div>
 	<!-- <a href="/socialapp/{{usr_id}}" -->
+			<a href="/socialapp/allusers">USERS</a>
+		    <a href="/socialapp/allposts">POSTS</a>
+			<a href="/socialapp/allcat">CATEGORIES</a>
+			<a href="/socialapp/allwords">UNWANTED WORDS</a>
+
+
 
 </body>
 </html>
