--- a/socialmedia/socialapp/templates/pages/all_posts.html
+++ b/socialmedia/socialapp/templates/pages/all_posts.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <div>
+	<a href="/socialapp/dashboard">back</a>
+
 	<a href="/socialapp/newpost">add new Post</a>
 {% for pst in allposts %}
 <div style="border:1px solid black">
@@ -28,6 +30,7 @@
 
 
 </div>
+
 
 
 
