--- a/socialmedia/socialapp/templates/pages/allwords.html
+++ b/socialmedia/socialapp/templates/pages/allwords.html
@@ -9,6 +9,8 @@ table, th, td {
 </style>
 </head>
 <body>
+		<a href="/socialapp/dashboard">back</a>
+
 
 
      <a href="/socialapp/newword">add new unwanted word</a>
