admin page with its all features with bootstrap

--- a/socialmedia/socialapp/templates/pages/allcat.html
+++ b/socialmedia/socialapp/templates/pages/allcat.html
@@ -38,9 +38,9 @@
 <!-- end navbar -->
     <div class="container">
     <br>
-   	<a href="/socialapp/dashboard"><button class="btn btn-success" style="width: 150px">back</button></a></a>
+   	<a href="/socialapp/dashboard"><button class="btn btn-success" style="width: 150px; margin-bottom: 10px">back</button></a>
 
-     <a href="/socialapp/newcat"><button class="btn btn-success" style="width: 150px">add new category</button></a>
+     <a href="/socialapp/newcat"><button class="btn btn-info" style="width: 150px;margin-bottom: 10px">add new category</button></a>
          <h3 class="alert alert-danger text-center" style="margin-top: 20px">CATEGORY PAGE</h3>
 
     <table class="table table-hover text-center">
@@ -55,9 +55,9 @@
 	<tr>
 	<td><h4>{{cat.category_name}}</h4></td>
 	
-	<td><a href="/socialapp/{{cat.id}}/catdelete"><button class="btn btn-danger" style="width: 150px">delete</button></a>
+	<td><a href="/socialapp/{{cat.id}}/catdelete"><button class="btn btn-danger" style="width: 150px;margin-bottom: 10px">delete</button></a>
 
-	<a href="/socialapp/{{cat.id}}/catupdate"><button class="btn btn-info" style="width: 150px">update</button></a></td>
+	<a href="/socialapp/{{cat.id}}/catupdate"><button class="btn btn-info" style="width: 150px;margin-bottom: 10px">update</button></a></td>
 
 
 
