--- a/socialmedia/socialapp/templates/pages/all_posts.html
+++ b/socialmedia/socialapp/templates/pages/all_posts.html
@@ -1,22 +1,59 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+ 	<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
 </head>
 <body>
-<div>
-	<a href="/socialapp/dashboard">back</a>
 
-	<a href="/socialapp/newpost">add new Post</a>
+<!--  start navbar -->
+
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<!--   <a class="navbar-brand" href="#">Logo</a>-->
+	  <img src="iti.png"  />
+
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Track</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">about</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+     
+	</ul>
+  </div>
+</nav>
+<!-- end navbar -->
+<br>
+<div class="container">
+	   	<a href="/socialapp/dashboard"><button class="btn btn-success" style="width: 150px;margin-bottom: 10px">back</button></a>
+
+	<a href="/socialapp/newpost"><button class="btn btn-info" style="width: 150px;margin-bottom: 10px">add new Post</button></a>
+             <h3 class="alert alert-danger text-center" style="margin-top: 20px">ALL POSTS</h3>
+<div>
+
+
 {% for pst in allposts %}
-<div style="border:1px solid black">
+<div style="margin-top: 20px" class="alert alert-danger">
 	
  
 <h3>title : {{pst.title}}</h3>
 <p>post : {{pst.p_body}}</p>
 <h5>category : {{pst.cat_name}}</h5>
-<a href="/socialapp/{{pst.id}}/deletepst">delete</a>
-<a href="/socialapp/{{pst.id}}/pstupdate">update</a>
+<a href="/socialapp/{{pst.id}}/deletepst"><button class="btn btn-danger" style="margin-bottom: 10px" >delete</button></a>
+<a href="/socialapp/{{pst.id}}/pstupdate"><button class="btn btn-info" style="margin-bottom: 10px">update</button></a>
 
 
 
@@ -34,6 +71,8 @@
 
 
 
+<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
 
