--- a/socialmedia/socialapp/templates/pages/header.html
+++ b/socialmedia/socialapp/templates/pages/header.html
@@ -14,7 +14,7 @@
   <body>
   	 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 <!--   <a class="navbar-brand" href="#">Logo</a>-->
-	  <img src="iti.png"  />
+    <img src="{% static 'img/iti.png' %}"  />
 
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
     <span class="navbar-toggler-icon"></span>
