--- a/socialmedia/socialapp/templates/pages/newpost.html
+++ b/socialmedia/socialapp/templates/pages/newpost.html
@@ -40,7 +40,7 @@
 <div class="container">
              <h3 class="alert alert-danger text-center" style="margin-top: 20px">NEW POST</h3>
 <br/>
-<form method="POST" class="">{%csrf_token%}
+<form method="POST" enctype="multipart/form-data">{%csrf_token%}
 	<h3>{{form.as_p}}</h3>
 	<button type='submit' class="btn btn-info" >Save</button>
 
