--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- jQuery !-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+    <!-- jQuery UI !-->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
     <!-- Bootstrap CSS -->
 {% load static %}
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
@@ -33,7 +39,14 @@
  <div class="collapse navbar-collapse" id="navbarNav">
    Welcome
  </div>
+
 </nav>
+<div class="ui-widget" align='center'>
+  <label for="search">Search: </label>
+  <input id="search">
+</div>
+
+
 <div class="container">
 <div class="row">
 <div class=" col-8">
@@ -135,8 +148,19 @@
 
 </div>
 
-</div>
+<script>
+$(function() {
+
+  $("#search").autocomplete({
+    source: "get_search/",
+    select: function (event, ui) {
+    window.location = "/socialapp/"+ui.item.id+"/post_page"
+    },
+    minLength: 2,
+  });
+});
+</script>
+
 </body>
-<script src="{% static 'jquery.min.js' %}"></script>
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
 </html>
