--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
+
     <!-- Bootstrap CSS -->
 {% load static %}
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
@@ -44,6 +45,9 @@
 <div class="ui-widget" align='center'>
   <label for="search">Search: </label>
   <input id="search">
+  <button id="btn_search"> Search </button>
+
+
 </div>
 
 
@@ -100,35 +104,35 @@
   </br>
     {% endfor %}
 
+
     <div class="text-center">
-
-        {% if posts.has_other_pages %}
-
-          <ul class="pagination">
-            {% if posts.has_previous %}
-              <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}"> <span >&laquo;</span>
-                <span class="sr-only">Previous</span>
-              </a></li>
-            {% else %}
-              <li class="page-item disabled"><span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
-            {% endif %}
-            {% for i in posts.paginator.page_range %}
-              {% if posts.number == i %}
-                <li class"page-item active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+          {% if posts.has_other_pages %}
+            <ul class="pagination">
+              {% if posts.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">
+                  <span >&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a></li>
               {% else %}
-                <li class="page-item"><a class="page-link"  href="?page={{ i }}">{{ i }}</a></li>
+                <li class="page-item disabled"> <span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
               {% endif %}
-            {% endfor %}
-            {% if posts.has_next %}
-              <li class="page-item"><a class="page-link"  href="?page={{ posts.next_page_number }}"><span >&raquo;</span>
-    <span class="sr-only">Next</span>
-              </a></li>
-            {% else %}
-              <li class="disabled page-item" ><span>&raquo;</span></li>
-            {% endif %}
-          </ul>
-        {% endif %}
-    </div>
+              {% for i in posts.paginator.page_range %}
+                {% if posts.number == i %}
+                  <li class"page-item active"> {{i}} </li>
+                {% else %}
+                  <li class="page-item"> <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                {% endif %}
+              {% endfor %}
+              {% if posts.has_next %}
+                <li class="page-item"><a class="page-link"  href="?page={{ posts.next_page_number }}"><span >&raquo;</span>
+      <span class="sr-only">Next</span>
+                </a></li>
+              {% else %}
+                <li class="disabled page-item" ><span>&raquo;</span></li>
+              {% endif %}
+            </ul>
+          {% endif %}
+      </div>
 
 </div>
 <div class="col-1"> </div>
@@ -147,10 +151,8 @@
 </div>
 
 </div>
-
 <script>
 $(function() {
-
   $("#search").autocomplete({
     source: "get_search/",
     select: function (event, ui) {
@@ -158,8 +160,15 @@ $(function() {
     },
     minLength: 2,
   });
+
+$("#btn_search").on("click",function(){
+  var keyword =$("#search").val() ;
+  window.location.href='/socialapp/'+keyword+'/filter';
+
+})
 });
 </script>
+
 
 </body>
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
