--- a/socialmedia/socialapp/templates/pages/all_user.html
+++ b/socialmedia/socialapp/templates/pages/all_user.html
@@ -8,34 +8,12 @@
 </head>
 <body>
 
-<!--  start navbar -->
+{% if is_admin == 1 %}
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-<!--   <a class="navbar-brand" href="#">Logo</a>-->
-	  <img src="{% static 'img/iti.png' %}"  />
 
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Track</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">about</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-     
-	</ul>
-  </div>
-</nav>
-<!-- end navbar -->
+{% include 'pages/navbar.html' %}
+
+
 <br>
 <div class="container">
    	<a href="/socialapp/dashboard"><button class="btn btn-success" style="width: 150px;margin-bottom: 10px">back</button></a></a>
@@ -55,26 +33,61 @@
 	<tr>
 	<td>{{usr.username}}</td>
 	<td>{{usr.email}}</td>
-	<!-- <td>{{usr.student_track}}</td>
-	<td><a href="/opensource/{{st.id}}">show more</a></td>
+	
 
-	<td><a href="/opensource/{{st.id}}/update">update</a></td>
-	<td><a href="/opensource/{{st.id}}/delete">delete</a></td> -->
-	{% if usr.is_superuser == 1%}
-		<td colspan="3"><h5 style="color: red">Admin</h5></td>
-  	{% endif %}
+	{% if bigboss == 1 %}
+        {% if usr.id == 1 %}
+        		<td colspan="2"><h5 style="color: red">OWNER</h5></td>
+        		<td><a href="/socialapp/{{usr.id}}/update"><button class="btn btn-info" style="margin-bottom: 10px">update</button></a></a></td>	
+        {% endif %}	
+        {% if usr.id != 1 %}
+             {% if usr.is_superuser == 1 %}
+             <td colspan="2"><h5 style="color: red">Admin</h5></td>
 
+        		<td><a href="/socialapp/{{usr.id}}/unpromote"><button class="btn btn-info" style="margin-bottom: 10px">unpromote</button></a></a></td>
+        	 {% endif %}
+             {% if usr.is_superuser == 0 %}
+                {% if usr.is_active == 1 %}
+					<td><a href="/socialapp/{{usr.id}}/block"><button class="btn btn-danger">block</button></a></td>
+					{% endif %}
+					{% if usr.is_active == 0 %}
+					<td><a href="/socialapp/{{usr.id}}/unblock"><button class="btn btn-warninig" style="margin-bottom: 10px">unblock</button></a></a></td>
+					{% endif %}
+					<td><a href="/socialapp/{{usr.id}}/promote"><button class="btn btn-info" style="margin-bottom: 10px">promote</button></a></a></td>
+				    <td><a href="/socialapp/{{usr.id}}/update"><button class="btn btn-success" style="margin-bottom: 10px">update</button></a></a></td>    			
+             {% endif %} 	
+        {% endif%}
+	{% endif%}
+	<!-- ---------------- -->
+		{% if bigboss != 1 %}
+        {% if usr.id == 1 %}
+        		<td colspan="3"><h5 style="color: red">OWNER</h5></td>
+        			
+        {% endif %}	
+        {% if usr.id != 1 %}
+             {% if usr.is_superuser == 1 %}
+	             {% if usr.id == bigboss%}
+	             <td colspan="2" style="background-color: #ddd"><h5 style="color: blue">Admin</h5></td>
+        		 <td style="background-color: #ddd"><a href="/socialapp/{{usr.id}}/update"><button class="btn btn-info" style="margin-bottom: 10px">update</button></a></a></td>
+        		 {% endif %}
+        		 {% if usr.id != bigboss%}
+	             <td colspan="3"><h5 style="color: red">Admin</h5></td>
+        		 
+        		 {% endif %}
 
-	{% if usr.is_superuser == 0 %}
-	{% if usr.is_active == 1 %}
-	<td><a href="/socialapp/{{usr.id}}/block"><button class="btn btn-danger">block</button></a></td>
-	{% endif %}
-	{% if usr.is_active == 0 %}
-	<td><a href="/socialapp/{{usr.id}}/unblock"><button class="btn btn-warninig" style="margin-bottom: 10px">unblock</button></a></a></td>
-	{% endif %}
-	<td><a href="/socialapp/{{usr.id}}/promote"><button class="btn btn-info" style="margin-bottom: 10px">promote</button></a></a></td>
-    <td><a href="/socialapp/{{usr.id}}/update"><button class="btn btn-success" style="margin-bottom: 10px">update</button></a></a></td>
-	{% endif %}
+        	 {% endif %}
+             {% if usr.is_superuser == 0 %}
+                {% if usr.is_active == 1 %}
+					<td><a href="/socialapp/{{usr.id}}/block"><button class="btn btn-danger">block</button></a></td>
+					{% endif %}
+					{% if usr.is_active == 0 %}
+					<td><a href="/socialapp/{{usr.id}}/unblock"><button class="btn btn-warninig" style="margin-bottom: 10px">unblock</button></a></a></td>
+					{% endif %}
+					<td><a href="/socialapp/{{usr.id}}/promote"><button class="btn btn-info" style="margin-bottom: 10px">promote</button></a></a></td>
+				    <td><a href="/socialapp/{{usr.id}}/update"><button class="btn btn-success" style="margin-bottom: 10px">update</button></a></a></td>    			
+             {% endif %} 	
+        {% endif%}
+	{% endif%}
 
     </tr>
 
@@ -85,6 +98,10 @@
     
 
 </div>
+{% endif %}
+{% if is_admin != 1 %}
+ <div>ya 7aramiiii</div>
+{% endif %}
 
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
