--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- jQuery !-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+    <!-- jQuery UI !-->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
+
     <!-- Bootstrap CSS -->
 {% load static %}
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
@@ -25,15 +32,11 @@
     </style>
   </head>
 <body>
-	<nav class="navbar navbar-expand-md  bar">
-    {% load static %}
- <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/><span> News </span> </div>
- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
-	 <span class="navbar-toggler-icon"></span>
- <div class="collapse navbar-collapse" id="navbarNav">
-   Welcome
- </div>
-</nav>
+  {% include 'pages/navbar.html' %}
+
+
+
+
 <div class="container">
 <div class="row">
 <div class=" col-8">
@@ -72,8 +75,8 @@
     {%  for post in posts %}
   <div class="border text-center ">
   <h2> {{post.title }} </h2>
-    <a href="/socialapp/{{post.id}}/post_page">   <img src="{% static "" %}img/{{ post.img }}" width="400">
- </a>
+    <a href="/socialapp/{{post.id}}/post_page">   <img src="{% static ""%}img/{{ post.img }}" alt="photo" width=300>
+</a>
     <br/>
     <p> {{post.p_body}} </p>
     <span> tags:#{{post.tag}} </span>
@@ -88,36 +91,40 @@
   </br>
     {% endfor %}
 
+
+
+
+
+
+
     <div class="text-center">
-
-        {% if posts.has_other_pages %}
-
-          <ul class="pagination">
-            {% if posts.has_previous %}
-              <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}"> <span >&laquo;</span>
-                <span class="sr-only">Previous</span>
-              </a></li>
-            {% else %}
-              <li class="page-item disabled"><span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
-            {% endif %}
-            {% for i in posts.paginator.page_range %}
-              {% if posts.number == i %}
-                <li class"page-item active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+          {% if posts.has_other_pages %}
+            <ul class="pagination">
+              {% if posts.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">
+                  <span >&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a></li>
               {% else %}
-                <li class="page-item"><a class="page-link"  href="?page={{ i }}">{{ i }}</a></li>
+                <li class="page-item disabled"> <span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
               {% endif %}
-            {% endfor %}
-            {% if posts.has_next %}
-              <li class="page-item"><a class="page-link"  href="?page={{ posts.next_page_number }}"><span >&raquo;</span>
-    <span class="sr-only">Next</span>
-              </a></li>
-            {% else %}
-              <li class="disabled page-item" ><span>&raquo;</span></li>
-            {% endif %}
-          </ul>
-        {% endif %}
-    </div>
-
+              {% for i in posts.paginator.page_range %}
+                {% if posts.number == i %}
+                  <li class"page-item active"> {{i}} </li>
+                {% else %}
+                  <li class="page-item"> <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                {% endif %}
+              {% endfor %}
+              {% if posts.has_next %}
+                <li class="page-item"><a class="page-link"  href="?page={{ posts.next_page_number }}"><span >&raquo;</span>
+      <span class="sr-only">Next</span>
+                </a></li>
+              {% else %}
+                <li class="disabled page-item" ><span>&raquo;</span></li>
+              {% endif %}
+            </ul>
+          {% endif %}
+      </div>
 </div>
 <div class="col-1"> </div>
 <div class="col-3" >
@@ -127,17 +134,41 @@
 <div class="w3-sidebar w3-bar-block border " style="width:20%" align="right">
   <div>
     <a href="/socialapp/{{category.id}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
-    <button class="btn btn-primary btn-small">Subscribe</button>
-    <button class="btn btn btn-danger btn-small">Unsubscribe</button>
+   <center><a href="/socialapp/subscribe/{{category.id}}">Subscribe</a></center>
+   
+   
   </div>
   {% endfor %}
   </div>
 </div>
+<button onclick=></div>
+<script>
+$(function() {
+  $("#search").autocomplete({
 
-</div>
+    source: "get_search/",
 
-</div>
+    select: function (event, ui) {
+
+    window.location = "/socialapp/"+ui.item.id+"/post_page"
+
+    },
+    minLength: 2,
+  });
+
+$("#btn_search").on("click",function(){
+
+  var keyword =$("#search").val();
+  alert(keyword)
+  
+  window.location= "/socialapp/"+keyword+"/filter"
+
+
+})
+});
+</script>
+
+
 </body>
-<script src="{% static 'jquery.min.js' %}"></script>
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
 </html>
