--- a/socialmedia/socialapp/templates/pages/update.html
+++ b/socialmedia/socialapp/templates/pages/update.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,34 +9,24 @@
  	<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
 </head>
 <body>
+	{% if who == id or who == 1 %}
+
 
 <!--  start navbar -->
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-<!--   <a class="navbar-brand" href="#">Logo</a>-->
-    <img src="{% static 'img/iti.png' %}"  />
+{% include 'pages/navbar.html' %}
 
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Track</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">about</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-     
-	</ul>
-  </div>
-</nav>
+<!-- end navbar -->
+<br>
+<div class="container">
+             <h3 class="alert alert-danger text-center" style="margin-top: 20px">UPDATE User</h3>
+<br/>
+<form method="POST" class="">{%csrf_token%}
+	<h3>{{form.as_p}}</h3>
+	<button type='submit' class="btn btn-info" >Save</button>
+{% elif  is_admin == 1 and normaluser == 0 %}
+{% include 'pages/navbar.html' %}
+
 <!-- end navbar -->
 <br>
 <div class="container">
@@ -44,7 +36,14 @@
 	<h3>{{form.as_p}}</h3>
 	<button type='submit' class="btn btn-info" >Save</button>
 
+
+{% else %}
+<h1 class="alert alert-danger text-center">sorry you can't access this feature</h1>
+
+{% endif %}
+
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
+
