--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!-- jQuery !-->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
-    <!-- jQuery UI !-->
+                    <!-- jQuery !-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+                    <!-- jQuery UI !-->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
-
-    <!-- Bootstrap CSS -->
+      <!-- Bootstrap CSS -->
 {% load static %}
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
     <style>
@@ -106,33 +104,50 @@
 
 
     <div class="text-center">
-          {% if posts.has_other_pages %}
-            <ul class="pagination">
-              {% if posts.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">
-                  <span >&laquo;</span>
-                  <span class="sr-only">Previous</span>
-                </a></li>
-              {% else %}
-                <li class="page-item disabled"> <span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
-              {% endif %}
-              {% for i in posts.paginator.page_range %}
-                {% if posts.number == i %}
-                  <li class"page-item active"> {{i}} </li>
-                {% else %}
-                  <li class="page-item"> <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                {% endif %}
-              {% endfor %}
-              {% if posts.has_next %}
-                <li class="page-item"><a class="page-link"  href="?page={{ posts.next_page_number }}"><span >&raquo;</span>
-      <span class="sr-only">Next</span>
-                </a></li>
-              {% else %}
-                <li class="disabled page-item" ><span>&raquo;</span></li>
-              {% endif %}
-            </ul>
+      {% if posts.has_other_pages %}
+        <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          {% if posts.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ posts.previous_page_number }}"  aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a></li>
+          {% else %}
+          <li class="page-item">
+            <a  class="page-link"  aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
           {% endif %}
-      </div>
+          {% for i in posts.paginator.page_range %}
+            {% if posts.number == i %}
+                <li class="active page-item"> <a class="page-link">{{ i }} </a> <span class="sr-only"> </span></li>
+            {% else %}
+                <li class="page-item"><a class="page-link"  href="?page={{i}}">{{ i }}</a></li>
+            {% endif %}
+          {% endfor %}
+          {% if posts.has_next %}
+          <li class="page-item">
+            <a  class="page-link" href="?page={{ posts.next_page_number}}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+      <span class="sr-only">Next</span>
+            </a>
+          </li>
+          {% else %}
+          <li class=" page-item">
+            <a class="page-link" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+          </a></li>
+          {% endif %}
+        </ul>
+      </nav>
+      {% endif %}
+    </div>
+  </div>
+</div>
 
 </div>
 <div class="col-1"> </div>
@@ -147,11 +162,10 @@
     <button class="btn btn btn-danger btn-small">Unsubscribe</button>
   </div>
   {% endfor %}
-  </div>
+      </div>
+    </div>
 </div>
-
-</div>
-<script>
+  <script>
 $(function() {
   $("#search").autocomplete({
     source: "get_search/",
@@ -160,16 +174,12 @@ $(function() {
     },
     minLength: 2,
   });
-
 $("#btn_search").on("click",function(){
-  var keyword =$("#search").val() ;
-  window.location.href='/socialapp/'+keyword+'/filter';
-
-})
+  var keyword =$("#search").val();
+  window.location='/socialapp/'+keyword+'/filter';
+  })
 });
-</script>
-
-
+  </script>
 </body>
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
 </html>
